kubernetes/server/3-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: binanceB
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: rmiccolis/binanceb_nodejs_server
        resources:
          limits:
            memory: 256Mi
            cpu: 200m
          requests:
            memory: 256Mi
            cpu: 200m
        ports:
        - containerPort: 3000
