kubernetes/server/1-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: binance-b
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
